# cob_environments

./: .travis.yml  README.md  stack.xml
cob_default_env_config/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  test_env_config.launch  upload_navigation_goals.launch  upload_object_locations.launch  upload_object_locations_base.launch  upload_object_locations_e0nav1.launch  upload_object_locations_e0nav1.launch~  upload_object_locations_e0nav2.launch  upload_object_locations_e0nav3.launch  upload_object_locations_e0nav4.launch  upload_object_locations_e1nav1.launch  upload_object_locations_e1nav2.launch  upload_object_locations_e1nav3.launch  upload_object_locations_e1nav4.launch  upload_object_locations_e2man1.launch  upload_object_locations_e2man2.launch  upload_object_locations_e2manBedroom.launch  upload_object_locations_e2manKitchen.launch  upload_object_locations_e2nav1.launch  upload_object_locations_e2task_maps.launch  upload_object_locations_initial.launch  upload_object_locations_training.launch  upload_param.launch
cob_default_env_config/adblab/: command_gui_buttons.yaml  map.pgm  map.yaml  navigation_goals.yaml
cob_default_env_config/agv-testenv/: map.pgm  map_orig.pgm
cob_default_env_config/agv-testenv/line_maps/: lineMap_agv_testenv.yaml
cob_default_env_config/agv-testenv/point_maps/: rfid_tags.yaml
cob_default_env_config/agv-testenv_more_accurate/point_maps/: rfid_tags.yaml
cob_default_env_config/automatica14/: map.pgm  navigation_goals.yaml
cob_default_env_config/automatica14/point_maps/: refl_marker.yaml
cob_default_env_config/automotive-assembly-line/: navigation_goals.yaml
cob_default_env_config/cmake/: cob_default_env_config-extras.cmake.in
cob_default_env_config/empty/: command_gui_buttons.yaml  object_locations.yaml
cob_default_env_config/envs/IZS-carpark-top/: map.yaml
cob_default_env_config/envs/empty/: map.pgm  nav_buttons.yaml  navigation_goals.yaml  object_groups.yaml  object_locations.yaml  path_segments.yaml
cob_default_env_config/envs/ipa-apartment/: map.pgm  nav_buttons.yaml  object_locations.yaml
cob_default_env_config/envs/ipa-kitchen/: object_locations.yaml
cob_default_env_config/envs/ipa-office/: loc_map.yaml  map.yaml  path_segments.yaml
cob_default_env_config/envs/ipa-production-plant/: object_locations.yaml
cob_default_env_config/envs/izs-campus/: gps_map_origin.yaml  map.pgm  map.yaml  path_segments.yaml
cob_default_env_config/envs/izs-carpark-top/: gps_map_origin.yaml  path_segments.yaml
cob_default_env_config/iff-versuchshalle/: map.pgm  trajectories.yaml
cob_default_env_config/iff-versuchshalle/point_maps/: reflMarkerMap_IFFVersuchshalle.yaml
cob_default_env_config/ipa-apartment/: command_gui_buttons.yaml  map.pgm  map.yaml  navigation_goals.yaml  object_locations.yaml  object_locations_base.yaml  object_locations_e0nav3.yaml  object_locations_e1nav3.yaml  object_locations_e1nav4.yaml  object_locations_e2man1.yaml  object_locations_e2man2.yaml  object_locations_e2manBedroom.yaml  object_locations_e2task_maps.yaml  object_locations_initial.yaml  path_segments.yaml  trajectories.yaml
cob_default_env_config/ipa-apartment/line_maps/: lineMap_ipaApartment.yaml  line_map.yaml
cob_default_env_config/ipa-apartment/point_maps/: reflMarker_gazebo.yaml
cob_default_env_config/ipa-apartment/polygon_maps/: restriction_polygon.yaml
cob_default_env_config/ipa-apartment/pose_maps/: corners.yaml  lasercorner.yaml
cob_default_env_config/ipa-factory/: command_gui_buttons.yaml  map.pgm  navigation_goals.yaml
cob_default_env_config/ipa-maze/: object_locations.yaml
cob_default_env_config/ipa-office/: map.pgm  map.yaml  object_locations.yaml  path_segments.yaml
cob_default_env_config/ipa-office-unmapped/: map.pgm  map.yaml
cob_default_env_config/ipa-office/landmarkshots/: Escalator_left_view.lms  Escalator_right_view.lms  Floorplan.lms  Plakat_3D_info.lms  Plakat_effirob_l.lms  Plakat_effirob_r.lms  Plakat_robot_osaft.lms  effirob_1.lms  effirob_10.lms  effirob_11.lms  effirob_12.lms  effirob_2.lms  effirob_3.lms  effirob_5.lms  effirob_6.lms  effirob_7.lms  effirob_8.lms  effirob_9.lms  fire_1.lms  fire_extinguisher.lms  landmarkshots.yaml  prace_door_1.lms  prace_door_2.lms  prace_door_3.lms  prace_door_4.lms  prace_door_5.lms  prace_door_6.lms  robot_pictures_1.lms  robot_pictures_10.lms  robot_pictures_11.lms  robot_pictures_12.lms  robot_pictures_13.lms  robot_pictures_14.lms  robot_pictures_15.lms  robot_pictures_16.lms  robot_pictures_17.lms  robot_pictures_18.lms  robot_pictures_19.lms  robot_pictures_2.lms  robot_pictures_20.lms  (+35 more)
cob_default_env_config/ipa-office/line_maps/: lineMap_IPA4thFloor.yaml
cob_default_env_config/ipa-office/local_grid_maps/: local_map_0.pgm  local_map_1.pgm  local_map_10.pgm  local_map_11.pgm  local_map_12.pgm  local_map_13.pgm  local_map_14.pgm  local_map_15.pgm  local_map_16.pgm  local_map_17.pgm  local_map_18.pgm  local_map_2.pgm  local_map_3.pgm  local_map_4.pgm  local_map_5.pgm  local_map_6.pgm  local_map_7.pgm  local_map_8.pgm  local_map_9.pgm  local_maps.yaml
cob_default_env_config/ipa-office/point_maps/: reflMarkerMap_IPA4thFloor.yaml  rfid_tags_ipa4thFloor.yaml
cob_default_env_config/ipa-office/polygon_maps/: restriction_polygon.yaml
cob_default_env_config/ipa-prace-labtest/: map.pgm
cob_default_env_config/ipa-prace-labtest/point_maps/: table_refl.yaml
cob_default_env_config/ipa-production-plant/: map.pgm  map.yaml  object_groups.yaml  object_locations.yaml  object_locations_hallway.yaml  object_locations_machine_room.yaml  object_locations_super_market1.yaml  object_locations_super_market2.yaml  reflMarker_locations.yaml
cob_default_env_config/ipa-production-plant/point_maps/: reflMarker_gazebo.yaml
cob_default_env_config/raw-exhibition/: command_gui_buttons.yaml  map.pgm  map.yaml  navigation_goals.yaml
cob_default_env_config/raw-industriestrasse/: map.pgm
cob_default_env_config/uh_robot_house/: command_gui_buttons.yaml  map.pgm  navigation_goals.yaml
cob_environments/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+276 files in other folders)
