<package>
  <name>cob_default_env_config</name>
  <version>0.5.1</version>
  <description>This package contains configuration files for the default environments for Care-O-bot supported by IPA.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_default_env_config</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rostest</build_depend>

  <!-- <test_depend>rostest</test_depend> -->

  <export>

  </export>
</package>
