<package format="2">
  <name>cob_default_env_config</name>
  <version>0.6.10</version>
  <description>This package contains configuration files for the default environments for Care-O-bot supported by IPA.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_default_env_config</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

</package>
