<package format="2">
  <name>cob_environments</name>
  <version>0.6.4</version>
  <description>This stack holds packages for IPA default environment configuration.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_environments</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cob_default_env_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
