<package format="2">
  <name>cob_environments</name>
  <version>0.6.10</version>
  <description>This stack holds packages for IPA default environment configuration.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_environments</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cob_default_env_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
